# CocDo

./: .gitignore  README.md  pyproject.toml
cocdo/: __init__.py
cocdo/kernel/: __init__.py  reduction.py  terms.py  typing.py
cocdo/model/: __init__.py  causal_ffnn.py  cocdo.py  planner.py  scm.py
cocnn/: __init__.py
cocnn/kernel/: __init__.py  codec.py  terms.py  typing.py
cocnn/model/: __init__.py  causal_ffnn.py  cocnn.py  scm.py
examples/: demo_ad_attribution.py  demo_causal_search.py  demo_gcastle.py  demo_llm_causal.py  demo_llm_scm_stack.py  demo_tictactoe.py
